--- a/src/app/playlist/program/program.component.scss
+++ b/src/app/playlist/program/program.component.scss
@@ -31,7 +31,8 @@
     display: none;
   }
 
-  tr, th {
+  tr,
+  th {
     padding: 8px;
   }
 
@@ -58,10 +59,10 @@
 }
 
 .time {
-	text-align: right;
+  text-align: right;
 }
 
 .artist,
 .title {
-	text-align: left;
+  text-align: left;
 }
