use new template syntax

--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -1,18 +1,24 @@
 <div class="playlist">
   <nav class="playlist-nav">
-    <a *ngFor="let edition of radioEditions" [routerLink]="'/' + edition"
-      >[{{ edition }}]</a
-    >
-  </nav>
-  <h1 class="title">Wappuradion soitetut</h1>
-  <p *ngIf="!tracks || !programs">Ladataan...</p>
-  <p *ngIf="tracks?.length === 0 || programs?.length === 0">
-    Ei näytettäviä kappaleita
-  </p>
-  <div *ngFor="let program of programs">
-    <app-playlist-program
-      [program]="program"
-      [tracks]="getTracksForProgram(program)"
-    ></app-playlist-program>
+    @for (edition of radioEditions; track edition) {
+      <a [routerLink]="'/' + edition">[{{ edition }}]</a>
+    }
+    </nav>
+    <h1 class="title">Wappuradion soitetut</h1>
+    @if (!tracks || !programs) {
+      <p>Ladataan...</p>
+    }
+    @else if (tracks.length === 0 || programs.length === 0) {
+      <p>Ei näytettäviä kappaleita</p>
+    }
+    @else {
+      @for (program of programs; track program) {
+        <div>
+          <app-playlist-program
+            [program]="program"
+            [tracks]="getTracksForProgram(program)"
+          ></app-playlist-program>
+        </div>
+      }
+    }
   </div>
-</div>
