--- a/src/app/playlist/program/program.component.html
+++ b/src/app/playlist/program/program.component.html
@@ -1,27 +1,27 @@
-@if (tracks.length > 0) {
+@if (tracks().length > 0) {
   <div>
     <div
       class="program-info"
-      [class.hidden]="!show"
-      (click)="show = !show"
-      [title]="show ? 'Piilota' : 'Näytä'"
+      [class.hidden]="!show()"
+      (click)="toggle()"
+      [title]="show() ? 'Piilota' : 'Näytä'"
       >
-      <h3>{{ program.title }}</h3>
+      <h3>{{ program().title }}</h3>
       <h5>
-        {{ program.startAt | date: "EEEE, MMMM d, H:mm" }} -
-        {{ program.endAt | date: "EEEE, MMMM d, H:mm" }}
+        {{ program().startAt | date: "EEEE, MMMM d, H:mm" }} -
+        {{ program().endAt | date: "EEEE, MMMM d, H:mm" }}
       </h5>
     </div>
     <table
       class="program-tracks"
-      [class.hidden]="!show"
+      [class.hidden]="!show()"
       >
       <tr>
         <th class="time">Aika</th>
         <th class="artist">Artisti</th>
         <th class="title">Kappale</th>
       </tr>
-      @for (track of tracks; track track.id) {
+      @for (track of tracks(); track track.id) {
         <tr>
           <td class="time" [title]="track.playedAt">
             {{ track.playedAt | date: "HH:mm" }}
