--- a/src/app/playlist/playlist.component.html
+++ b/src/app/playlist/playlist.component.html
@@ -3,22 +3,20 @@
     @for (edition of radioEditions; track edition) {
       <a [routerLink]="'/' + edition">[{{ edition }}]</a>
     }
-    </nav>
-    <h1 class="title">Wappuradion soitetut</h1>
-    @if (loading()) {
-      <p>Ladataan...</p>
+  </nav>
+  <h1 class="title">Wappuradion soitetut</h1>
+  @if (loading()) {
+    <p>Ladataan...</p>
+  } @else if (tracks().length === 0 || programs().length === 0) {
+    <p>Ei näytettäviä kappaleita</p>
+  } @else {
+    @for (program of programs(); track program.id) {
+      <div>
+        <app-playlist-program
+          [program]="program"
+          [tracks]="getTracksForProgram(program)"
+        ></app-playlist-program>
+      </div>
     }
-    @else if (tracks().length === 0 || programs().length === 0) {
-      <p>Ei näytettäviä kappaleita</p>
-    }
-    @else {
-      @for (program of programs(); track program.id) {
-        <div>
-          <app-playlist-program
-            [program]="program"
-            [tracks]="getTracksForProgram(program)"
-          ></app-playlist-program>
-        </div>
-      }
-    }
-  </div>
+  }
+</div>
