--- a/src/app/playlist/program/program.component.scss
+++ b/src/app/playlist/program/program.component.scss
@@ -13,10 +13,14 @@
     border-style: solid;
   }
 
+  h3 {
+    margin: 10px 0 5px;
+  }
+
   h5 {
     font-family: "Lucida Console", Monaco, monospace;
     color: #ddd;
-    margin-top: -10px;
+    margin: 5px 0;
     font-weight: normal;
   }
 }
