--- a/src/app/playlist/program/program.component.scss
+++ b/src/app/playlist/program/program.component.scss
@@ -7,7 +7,7 @@
     cursor: pointer;
   }
 
-  &.hidden {
+  &.collapsed {
     border-color: #2d030e;
     border-width: 0 3px 3px 0;
     border-style: solid;
@@ -31,9 +31,7 @@
   table-layout: fixed;
   white-space: nowrap;
 
-  &.hidden {
-    display: none;
-  }
+
 
   tr,
   th {
@@ -65,6 +63,38 @@
   .artist,
   .title {
     text-align: left;
+  }
+
+  .actions {
+    width: 50px;
+    text-align: right;
+
+    button {
+      border: none;
+      background-color: inherit;
+      color: white;
+      font-size: 1em;
+      letter-spacing: 1px;
+      padding: 0;
+      margin: 0 2px;
+      cursor: pointer;
+      display: inline-block;
+
+      &:hover {
+        color: lightgray;
+      }
+
+      &:disabled {
+        opacity: 0.5;
+        cursor: not-allowed;
+      }
+    }
+  }
+
+  input {
+    width: 100%;
+    margin: 0;
+    padding: 0;
   }
 }
 
