--- a/src/app/playlist/program/program.component.scss
+++ b/src/app/playlist/program/program.component.scss
@@ -71,10 +71,10 @@
       border: none;
       background-color: inherit;
       color: white;
-      font-size: 1em;
-      letter-spacing: 1px;
+      font-family: "Lucida Console", Monaco, monospace;
+      text-transform: uppercase;
       padding: 0;
-      margin: 0 2px;
+      margin: 0 1px;
       cursor: pointer;
       display: inline-block;
 
